fixed the extra space at the bottom

--- a/mysite/static/style.css
+++ b/mysite/static/style.css
@@ -13,8 +13,8 @@ body, html {
 }
 
 .vertical-center {
-    min-height: 100%;
-    min-height: 100vh;
+    min-height: 90%;
+    min-height: 90vh;
   
     display: flex;
     align-items: center;
